# pdf-to-excel

./: main.spec  pyproject.toml  readme.md
src/: main.py  pdf.py
